--- a/css/styles.css
+++ b/css/styles.css
@@ -307,10 +307,10 @@ footer{
 #about{
     padding:75px 15px;
     border-bottom:1px solid #dcd9d9;
-    text-align: center;
 }
 #about h2{
-    color:#374054
+    color:#374054;
+    text-align:center;
 }
 #about p{
     color:#74808a;
