--- a/css/styles.css
+++ b/css/styles.css
@@ -306,11 +306,11 @@ footer{
 }
 #about{
     padding:75px 15px;
+    text-align:center;
     border-bottom:1px solid #dcd9d9;
 }
 #about h2{
-    color:#374054;
-    text-align:center;
+    color:#374054
 }
 #about p{
     color:#74808a;
