--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ header.sticky{
     display:none;
     text-align:right;
     width:100%;
-    background:#fff;
+    background:#000;
     font-size:1.5em;
     padding-right:15px;
     padding-top:10px;
