--- a/css/styles.css
+++ b/css/styles.css
@@ -66,9 +66,9 @@ header{
     animation-duration:0.75s
 }
 header ul{
-    display:inline-block;
-    background:#fff;
-    text-align:center;
+    display:block;
+    background:#000;
+    text-align:right;
     padding:10px;
     margin:0;
     border-bottom-right-radius:4px;
@@ -119,7 +119,7 @@ header.sticky{
     display:none;
     text-align:right;
     width:100%;
-    background:#000;
+    background:#fff;
     font-size:1.5em;
     padding-right:15px;
     padding-top:10px;
