--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ header{
 }
 header ul{
     display:block;
-    background:#000;
+    background:#fff;
     text-align:right;
     padding:10px;
     margin:0;
