--- a/css/styles.css
+++ b/css/styles.css
@@ -668,7 +668,10 @@ footer{
         top:auto
     }
     #lead-content h1{
-        font-size:3em
+        font-size:2.5em
+    }
+    #lead-content h3{
+        font-size:3.3em
     }
     #lead-content h2{
         font-size:1.75em
@@ -704,7 +707,10 @@ footer{
         margin-bottom:10px
     }
     #lead-content h1{
-        font-size:2em
+        font-size:1.7em
+    }
+    #lead-content h3{
+        font-size:2.3em
     }
     #lead-content h2{
         font-size:1.3em
