--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ header li{
 }
 header a{
     display:block;
-    color:#3498db;
+    color:#302384;
     padding:10px
 }
 header a:hover{
@@ -87,7 +87,7 @@ header a:hover{
     border-radius:4px
 }
 header a:focus{
-    color:#3498db;
+    color:#302384;
     text-decoration:none
 }
 header.active{
@@ -106,7 +106,7 @@ header.sticky{
     position:fixed;
     right:15px;
     top:10px;
-    color:#3498db;
+    color:#302384;
     font-size:1.5em;
     z-index:20;
     padding:0 7px;
@@ -122,7 +122,7 @@ header.sticky{
     padding-right:15px;
     padding-top:10px;
     cursor:pointer;
-    color:#3498db
+    color:#302384
 }
 #mobile-menu-close span{
     font-size:0.5em;
@@ -175,7 +175,7 @@ footer{
     padding:10px
 }
 .social a:hover{
-    color:#3498db
+    color:#302384
 }
 .btn-rounded-white{
     display:inline-block;
@@ -186,7 +186,7 @@ footer{
     transition:.5s ease all
 }
 .btn-rounded-white:hover{
-    color:#3498db;
+    color:#302384;
     background:#fff;
     text-decoration:none
 }
@@ -212,7 +212,7 @@ footer{
     left:0;
     right:0;
     margin:0 auto;
-    background:#3498db
+    background:#302384
 }
 .background-alt{
     background:#f2f2f5
@@ -347,7 +347,7 @@ footer{
     right:auto;
     height:100%;
     width:3px;
-    background:#3498db;
+    background:#302384;
     z-index:0
 }
 #experience-timeline:after{
@@ -355,8 +355,8 @@ footer{
     content:'';
     width:3px;
     height:40px;
-    background:#3498db;
-    background:linear-gradient(to bottom, #3498db, rgba(52,152,219,0));
+    background:#302384;
+    background:linear-gradient(to bottom, #302384, rgba(52,152,219,0));
     top:100%;
     left:303px
 }
@@ -397,7 +397,7 @@ footer{
     color:#fff;
     width:50px;
     height:50px;
-    background:#3498db;
+    background:#302384;
     border-radius:50%;
     float:left;
     z-index:99;
@@ -538,7 +538,7 @@ footer{
 }
 #contact{
     padding:50px 15px;
-    background:#3498db;
+    background:#302384;
     text-align:center
 }
 #contact h2{
@@ -590,7 +590,7 @@ footer{
     border-radius:4px;
     padding:5px 10px;
     border:none;
-    color:#3498db;
+    color:#302384;
     font-weight:700;
     box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);
     transition:.5s ease all
