--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ footer{
     right:0;
     bottom:0;
     left:0;
-    background:#302384;
+    background:rgba(33,125,187,0.8);
     z-index:1
 }
 #lead-down{
