color scheme change

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ footer{
 
 .DP {
     margin: 1em auto;
-    background: url("../images/AP.jpg") no-repeat;
+    background: url("../images/APas.jpg") no-repeat;
     background-size: 15vw 15vw;
     background-position: center;
     width: 20vw;
