--- a/css/styles.css
+++ b/css/styles.css
@@ -557,8 +557,8 @@ footer{
     border-radius:4px;
     border:none;
     margin-bottom:10px;
-    background:#1d6fa5;
-    color:#fff;
+    background:#fff;
+    color:#aca7cd;
     transition:.5s ease all
 }
 #contact-form input::-webkit-input-placeholder,#contact-form textarea::-webkit-input-placeholder{
