--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ footer{
     right:0;
     bottom:0;
     left:0;
-    background:rgb(48,35,132);
+    background:rgba(48,35,132,0.6);
     z-index:1
 }
 #lead-down{
