--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ footer{
     line-height:0.9em
 }
 #lead-content h2{
-    color:#a0cfee;
+    color:#827bb5;
     font-weight:500;
     font-size:2.25em;
     margin-bottom:15px
@@ -275,7 +275,7 @@ footer{
     right:0;
     bottom:0;
     left:0;
-    background:rgba(48,35,132,0.6);
+    background:rgba(48,35,132,0.2);
     z-index:1
 }
 #lead-down{
@@ -295,7 +295,7 @@ footer{
     width:35px;
     height:35px;
     border-radius:50%;
-    border:3px solid #a0cfee;
+    border:3px solid #827bb5;
     text-align:center
 }
 #lead-down i{
@@ -557,7 +557,7 @@ footer{
     border-radius:4px;
     border:none;
     margin-bottom:10px;
-    background:#302384;
+    background:#6e65a8;
     color:#fff;
     transition:.5s ease all
 }
