Image and color scheme change

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ header a{
     padding:10px
 }
 header a:hover{
-    color:#217dbb;
+    color:#302384;
     text-decoration:none;
     background:#eee;
     border-radius:4px
