--- a/css/styles.css
+++ b/css/styles.css
@@ -239,10 +239,10 @@ footer{
 
 .DP {
     margin: 1em auto;
-    background: url("../images/AP.JPG") no-repeat;
+    background: url("../images/dp.jpg") no-repeat;
     background-size: 25vw 25vw;
     background-position: center;
-    width: 10vw;
+    width: 20vw;
     height: 20vw;
     border-radius: 100vw;
     -webkit-border-radius: 100vw;
