--- a/css/styles.css
+++ b/css/styles.css
@@ -528,7 +528,7 @@ footer{
     max-width:800px
 }
 .skillTitle {
-    padding: 10px 3px;
+    padding: 10px 3px 0px 10px;
     text-align: center;
 }
 
